--- a/home-manager/features/hyprland/hyprland.conf
+++ b/home-manager/features/hyprland/hyprland.conf
@@ -49,8 +49,8 @@ general {
     gaps_in = 5
     gaps_out = 20
     border_size = 2
-    col.active_border = rgba(427b58ee) rgba(b57614ee) 45deg
-    col.inactive_border = rgba(928374aa)
+    col.active_border = rgba(cba6f7ee) rgba(b4befeee) 45deg
+    col.inactive_border = rgba(6c7086aa)
 
     layout = dwindle
 }
@@ -176,7 +176,7 @@ bind=$mainMod, Print, exec, grim -g "$(slurp)" - | wl-copy
 
 # Commands to be executed on launch
 exec-once=swww init
-exec-once=swww img ~/Pictures/gruvbox_image46.png
+exec-once=swww img ~/Pictures/Rice2.png
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=playerctld daemon
 exec-once = waybar
