Added Zellij + Other changes

--- a/home-manager/features/hyprland/hyprland.conf
+++ b/home-manager/features/hyprland/hyprland.conf
@@ -49,7 +49,7 @@ general {
     gaps_in = 5
     gaps_out = 20
     border_size = 2
-    col.active_border = rgba(cba6f7ee) rgba(b4befeee) 45deg
+    col.active_border = rgba(89b4faee) rgba(b4befeee) 45deg
     col.inactive_border = rgba(6c7086aa)
 
     layout = dwindle
@@ -123,7 +123,7 @@ device:epic-mouse-v1 {
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, alacritty
+bind = $mainMod, Q, exec, kitty
 bind = $mainMod, C, killactive, 
 bind = $mainMod, M, exit, 
 bind = $mainMod, E, exec, dolphin
@@ -176,7 +176,7 @@ bind=$mainMod, Print, exec, grim -g "$(slurp)" - | wl-copy
 
 # Commands to be executed on launch
 exec-once=swww init
-exec-once=swww img ~/Pictures/Rice2.png
+exec-once=swww img ~/Pictures/Rice7.png
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=playerctld daemon
 exec-once = waybar
